src/parser.rs
use std::{iter::Peekable, slice::Iter};

use anyhow::bail;

use crate::{
    expr::{Expr, Object},
    stmt::Stmt,
    token::{Token, TokenType},
};

#[derive(Debug)]
pub struct TokenParser<'a> {
    tokens: Peekable<Iter<'a, Token>>,
}

impl<'a> TokenParser<'a> {
    pub fn new(tokens: Peekable<Iter<'a, Token>>) -> TokenParser<'a> {
        TokenParser { tokens }
    }

    pub fn parse(&mut self) -> Vec<Stmt> {
        let mut stmts = Vec::new();
        while self
            .tokens
            .peek()
            .is_some_and(|tok| !matches!(tok.token_type, TokenType::Eof))
        {
            match self.statement() {
                Ok(stmt) => stmts.push(stmt),
                Err(e) => {
                    tracing::error!("Syntax error: {}", e);
                }
            }
        }

        stmts
    }

    fn statement(&mut self) -> anyhow::Result<Stmt> {
        if self
            .tokens
            .peek()
            .is_some_and(|tok| matches!(tok.token_type, TokenType::Print))
        {
            self.print_statment()
        } else {
            self.expr_statement()
        }
    }

    fn expr_statement(&mut self) -> anyhow::Result<Stmt> {
        Ok(Stmt::Expression(self.expression()?))
    }

    // TODO: move this to a stdlib function
    fn print_statment(&mut self) -> anyhow::Result<Stmt> {
        let print_tok = self.tokens.next();
        if !print_tok.is_some_and(|tok| matches!(tok.token_type, TokenType::Print)) {
            panic!("Called print_statment() without next token being a print token");
        }
        let print_tok = print_tok.unwrap();

        let expr = self.expression()?;
        self.expect(
            &[TokenType::Semicolon],
            &format!(
                "Statement without trailing semicolon on line {}",
                print_tok.line
            ),
        )?;
        Ok(Stmt::Print(expr))
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn expression(&mut self) -> anyhow::Result<Expr> {
        let mut expr = self.equality()?;

        if self
            .tokens
            .peek()
            .is_some_and(|tok| matches!(tok.token_type, TokenType::Comma))
        {
            while self
                .tokens
                .peek()
                .is_some_and(|tok| matches!(tok.token_type, TokenType::Comma))
            {
                let comma = self.tokens.next().expect("Just peeked at this");
                let right = self.equality()?;
                expr = Expr::Binary {
                    left: Box::new(expr),
                    right: Box::new(right),
                    operator: comma.clone(),
                };
            }

            return Ok(expr);
        }

        if self
            .tokens
            .peek()
            .is_some_and(|tok| matches!(tok.token_type, TokenType::QuestionMark))
        {
            let question_mark = self.tokens.next().expect("Just peeked at this");
            let left = self.expression()?;

            if !self
                .tokens
                .next()
                .is_some_and(|tok| matches!(tok.token_type, TokenType::Colon))
            {
                bail!(
                    "Ternary operator without ':' starting on line {}",
                    question_mark.line
                )
            };

            let right = self.expression()?;
            expr = Expr::Ternary {
                condition: Box::new(expr),
                left: Box::new(left),
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn equality(&mut self) -> anyhow::Result<Expr> {
        // equality -> comparison ( ("!=" | "==") comparison)*
        self.parse_binary_op(
            &[TokenType::EqualEqual, TokenType::BangEqual],
            TokenParser::comparison,
        )
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn comparison(&mut self) -> anyhow::Result<Expr> {
        self.parse_binary_op(
            &[
                TokenType::Less,
                TokenType::LessEqual,
                TokenType::Greater,
                TokenType::GreaterEqual,
            ],
            TokenParser::term,
        )
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn term(&mut self) -> anyhow::Result<Expr> {
        self.parse_binary_op(&[TokenType::Minus, TokenType::Plus], TokenParser::factor)
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn factor(&mut self) -> anyhow::Result<Expr> {
        self.parse_binary_op(&[TokenType::Slash, TokenType::Star], TokenParser::unary)
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn unary(&mut self) -> anyhow::Result<Expr> {
        tracing::debug!("unary");
        if let Some(tok) = self.tokens.peek()
            && matches!(tok.token_type, TokenType::Bang | TokenType::Minus)
        {
            let operator = self.tokens.next().expect("Just peeked").clone();
            let right = Box::new(self.unary()?);
            Ok(Expr::Unary { operator, right })
        } else {
            self.primary()
        }
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn primary(&mut self) -> anyhow::Result<Expr> {
        tracing::debug!("primary");
        if let Some(tok) = self.tokens.next() {
            tracing::debug!("token type: {:?}", tok.token_type);
            match &tok.token_type {
                TokenType::False => Ok(Expr::Literal {
                    value: Object::Boolean(false),
                }),
                TokenType::True => Ok(Expr::Literal {
                    value: Object::Boolean(true),
                }),
                TokenType::Nil => Ok(Expr::Literal { value: Object::Nil }),
                TokenType::String(value) => Ok(Expr::Literal {
                    value: Object::String(value.to_string()),
                }),
                TokenType::Number(value) => Ok(Expr::Literal {
                    value: Object::Number(*value),
                }),
                TokenType::LParen => {
                    let line = tok.line;
                    let expr = self.expression()?;
                    if !self
                        .tokens
                        .next()
                        .is_some_and(|t| matches!(t.token_type, TokenType::RParen))
                    {
                        bail!("Got invalid token list with unclosed '(' on line {}", line);
                    }
                    Ok(Expr::Grouping {
                        expression: Box::new(expr),
                    })
                }
                TokenType::Slash
                | TokenType::Star
                | TokenType::Semicolon
                | TokenType::Plus
                | TokenType::Minus
                | TokenType::Comma
                | TokenType::Bang
                | TokenType::BangEqual
                | TokenType::Equal
                | TokenType::EqualEqual
                | TokenType::Greater
                | TokenType::GreaterEqual
                | TokenType::Less
                | TokenType::LessEqual
                | TokenType::QuestionMark
                | TokenType::Colon => {
                    let _right = self.expression();
                    tracing::error!(
                        "Got unexpected operator token: {:?} on line {}",
                        tok.token_type,
                        tok.line
                    );
                    Ok(Expr::Literal { value: Object::Nil })
                }
                _ => bail!("Expected expression on line {}", tok.line),
            }
        } else {
            bail!("Unexpected end of input while parsing expression")
        }
    }

    /// Resynchronize the parser when we hit a syntax error and need to get back to a valid state
    fn synchronize(&mut self) {
        let mut last = if let Some(tok) = self.tokens.next() {
            tok
        } else {
            // if there are no more tokens we don't need to synchronize
            return;
        };

        while let Some(tok) = self.tokens.peek()
            && !matches!(tok.token_type, TokenType::Eof)
        {
            // probably just finished a statement
            if matches!(last.token_type, TokenType::Semicolon) {
                return;
            }

            // probably about to start a statement
            match last.token_type {
                TokenType::Class
                | TokenType::Fun
                | TokenType::Var
                | TokenType::For
                | TokenType::If
                | TokenType::While
                | TokenType::Print
                | TokenType::Return => return,
                _ => (),
            }

            last = self.tokens.next().expect("Just peeked at this");
        }
    }

    #[tracing::instrument(level = "debug", skip_all)]
    fn parse_binary_op(
        &mut self,
        token_types: &[TokenType],
        next_level: fn(&mut TokenParser<'a>) -> anyhow::Result<Expr>,
    ) -> anyhow::Result<Expr> {
        tracing::debug!("parsing binary op");
        let mut expr = next_level(self)?;
        while let Some(tok) = self.tokens.peek()
            && token_types.contains(&tok.token_type)
        {
            let operator = self.tokens.next().expect("Just peeked at this").clone();
            let right = next_level(self)?;
            expr = Expr::Binary {
                left: Box::new(expr),
                right: Box::new(right),
                operator,
            };
        }

        Ok(expr)
    }

    fn expect(&mut self, expected_token_types: &[TokenType], message: &str) -> anyhow::Result<()> {
        if !self
            .tokens
            .next()
            .is_some_and(|tok| expected_token_types.contains(&tok.token_type))
        {
            bail!("{}", message);
        } else {
            Ok(())
        }
    }
}
